--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 
     <template id="barInfoTemplate">
     <!-- Status if the bar is open -->
+        <div class="bar-name"></div>
         <div class="status-board">Is the bar open</div>
+        <div class="closes-in">Is the bar closes in x hours</div>
 
     <!-- How many more hours will the bar will be open -->
-        <div class="hours-left">How many hours will the bar be open</div>
     </template>
 
     <template id="beerInfoTemplate">
