--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
 
     
     
-    <script src="http://petlatkea.dk/2018/front/foobar.js"></script>
+    <!-- <script src="http://petlatkea.dk/2018/front/foobar.js"></script> -->
+    <script src="js/script.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
